<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level2Activity">

    <ImageView
        android:id="@+id/score"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:src="@drawable/koin"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_150dp"
        android:contentDescription="@string/txt_desc" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_your_score"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/score"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_35dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:cardCornerRadius="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"
        android:layout_marginTop="@dimen/_20dp">

        <View
            android:layout_width= "370dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_soallevel2"/>

        <TextView
            android:id="@+id/tv_soal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_50dp"
            android:text="@string/txt_soal"
            android:textSize="@dimen/_25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/jml_halaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_1_5_question"
            android:textSize="@dimen/_20sp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:textColor="@android:color/black"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:background="@drawable/gradient_level2"/>

        <RadioGroup
            android:id="@+id/rg_soal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_contohOpsi"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:textSize="@dimen/_25sp"
                android:textAlignment="center"
                android:background="@drawable/selector_radio"

                />

            <RadioButton

                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:textSize="@dimen/_25sp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:text="@string/txt_contohOpsi"
                android:textAlignment="center"
                android:background="@drawable/selector_radio"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:textSize="@dimen/_25sp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:text="@string/txt_contohOpsi"
                android:textAlignment="center"
                android:background="@drawable/selector_radio"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_contohOpsi"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:textSize="@dimen/_25sp"
                android:textAlignment="center"
                android:background="@drawable/selector_radio"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/txt_menu"
            android:textColor="#FE8900"
            android:textSize="@dimen/_25sp"
            android:background="@drawable/bg_hitam"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginBottom="60dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/txt_next"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_25sp"
            android:layout_gravity="bottom"
            android:layout_marginStart="220dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/btn_shape" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>