<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <ImageView
        android:id="@+id/lengkungan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lengkungan1"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/txt_desc" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lengkungan2"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/txt_desc" />

    <ImageView
        android:id="@+id/logomenang"
        android:layout_width="377dp"
        android:layout_height="334dp"
        android:contentDescription="@string/txt_desc"
        android:src="@drawable/juara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_150dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artelic"
        android:text="@string/txt_congratulation"
        android:textAlignment="center"
        android:textSize="@dimen/_70sp"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_score"
        android:textAlignment="center"
        android:textSize="@dimen/_30sp"
        android:layout_marginStart="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logomenang"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_highscore"
        android:textAlignment="center"
        android:textSize="@dimen/_30sp"
        android:layout_marginStart="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_hasilScore1"
        android:layout_width="6dp"
        android:layout_height="33dp"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_30sp"
        app:layout_constraintStart_toEndOf="@id/tv_score"
        app:layout_constraintTop_toBottomOf="@id/logomenang"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_highscore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="@dimen/_30sp"
        android:layout_marginStart="@dimen/_10dp"
        app:layout_constraintStart_toEndOf="@id/tv_highscore"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        tools:ignore="MissingConstraints"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/tv_highscore"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/txt_desc" />

    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/tv_highscore"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginStart="@dimen/_50dp"
        app:layout_constraintStart_toEndOf="@id/btn_menu"
        android:contentDescription="@string/txt_desc" />

    <Button
        android:id="@+id/btn_level"
        android:layout_width="@dimen/_150dp"
        android:layout_height="60dp"
        android:text="@string/txt_next_level"
        android:textColor="#FE8900"
        android:textSize="@dimen/_20sp"
        android:background="@drawable/bg_hitam"
        android:layout_marginStart="@dimen/_50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_highscore"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintStart_toEndOf="@id/btn_share"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>